--- a/Analysis scripts/Sequencing data analyses/RNAseq_cormatrix_PCA.Rmd
+++ b/Analysis scripts/Sequencing data analyses/RNAseq_cormatrix_PCA.Rmd
@@ -72,7 +72,7 @@ cormat_rna <- ggplot(R_cor) +
   scale_fill_distiller(name = "Pearson's r  ", palette = "YlOrRd", direction = 1, limits = c(0.85, 1)) +
   facet_nested(strain2+CHX2~strain1+CHX1, scales = "free", space = "free", nest_line = TRUE, strip = strip_nested(size = "variable")) +
   xlab("") + ylab("") +
-  theme_bw(base_size = 8) + 
+  theme_bw(base_size = 10) + 
   theme(panel.grid = element_blank(), panel.spacing = unit(0.1, "cm"), panel.border = element_rect(size = 0.2),
         strip.background = element_blank(), strip.text = element_text(face = "italic"), 
         legend.position = "top", legend.key.height = unit(0.25, "cm"), aspect.ratio = 1)
@@ -113,26 +113,30 @@ pall <- RColorBrewer::brewer.pal(n = 12, "Paired")
 pca_rna <- ggplot(pcaData, aes(x = PC1, y = PC2, color = strain)) +
   geom_hline(yintercept = 0, linetype = "dashed", size = 0.5) +
   geom_vline(xintercept = 0, linetype = "dashed", size = 0.5) +
-  geom_point(aes(shape = CHX), alpha = 1, size = 1, stroke = 0.5) +
-  geom_text(aes(label = rep), size = 1.5, nudge_y = 0.5, show.legend = FALSE) +
+  geom_point(aes(shape = CHX), alpha = 1, size = 2, stroke = 0.5) +
+  geom_text(aes(label = rep), size = 6/.pt, nudge_y = 1, show.legend = FALSE) +
   xlab(paste0("PCA: ", percentVar[1], "% variance")) + ylab(paste0("PCA: ", percentVar[2], "% variance")) +
   scale_shape_manual(name = "Library", values = c(`-CHX` = 5, `+CHX` = 9)) +
   scale_color_manual(values = c("grey20", "#E31A1C", "#6A3D9A", # N-term
                                 "grey60", "#FB9A99", "#B2DF8A", "#A6CEE3")) + # C-term
   coord_fixed() +
-  theme_bw(base_size = 8) + 
-  theme(legend.position = "bottom", legend.box = "vertical", legend.margin = unit(0.5, "cm"), legend.box.just = "left", legend.key.height = unit(0.1, "cm")) +
-  guides(color = guide_legend(title = "Strain", label.theme = element_text(face = "italic", size = 6), byrow = TRUE, 
-                              order = 1, nrow = 3),
-         shape = guide_legend(order = 2, nrow = 1))
+  theme_bw(base_size = 10) + 
+  #theme(legend.position = "bottom", legend.box = "vertical", legend.margin = unit(0.5, "cm"), legend.box.just = "left", legend.key.height = unit(0.1, "cm")) +
+  #guides(color = guide_legend(title = "Strain", label.theme = element_text(face = "italic", size = 6), byrow = TRUE, 
+   #                           order = 1, nrow = 3),
+    #     shape = guide_legend(order = 2, nrow = 1))
+  theme(legend.position = "right", legend.box = "vertical", legend.key.height = unit(0.3, "cm")) +
+  guides(color = guide_legend(title = "Strain", label.theme = element_text(face = "italic", size = 8), order = 1),
+         shape = guide_legend(order = 2))
 ```
 
 #### Combine plots
 ```{r}
-library(patchwork)
-p <- (cormat_rna / pca_rna) + plot_layout(nrow = 2, ncol = 1, heights = c(0.7, 0.3)) +
-  plot_annotation(tag_levels = 'A') & 
-  theme(plot.tag = element_text(size = 9, face = "bold"), plot.tag.position = "topleft")
+#library(patchwork)
+#p <- (cormat_rna / pca_rna) + plot_layout(nrow = 2, ncol = 1, heights = c(0.7, 0.3)) +
+ # plot_annotation(tag_levels = 'A') & 
+  #theme(plot.tag = element_text(size = 12, face = "bold"), plot.tag.position = "topleft")
+p <- ggarrange(cormat_rna, pca_rna, nrow = 2, labels = "AUTO", heights = c(0.75, 0.25), font.label = list(size = 12, face = "bold"))
 ```
 ```{r}
 library(Cairo)
@@ -143,7 +147,7 @@ CairoFonts(
   bolditalic = "Arial:style=Black Italic",
   symbol = "Symbol"
 )
-cairo_pdf(filename = "../../Figures/Replicate_reproducibility_RNAseq_6.5x10.pdf", family = "Arial", width = 6.5, height = 10) 
+cairo_pdf(filename = "Replicate_reproducibility_RNAseq_8x10_v2.pdf", family = "Arial", width = 8, height = 10) 
 p
 dev.off()
 ```
