--- a/Analysis scripts/Sequencing data analyses/Riboseq_analysis_DESeq2.Rmd
+++ b/Analysis scripts/Sequencing data analyses/Riboseq_analysis_DESeq2.Rmd
@@ -291,10 +291,10 @@ A <- ggplot() +
   scale_color_manual(name = "", values = c("grey70", "orange", "purple")) +
   xlab("Total (mean normalized counts)") + ylab("IP (mean normalized counts)") +
   coord_cartesian(xlim = c(10^-0.5, 10^5), ylim = c(10^-0.5, 10^5)) +
-  theme_bw(base_size = 8) + 
+  theme_bw(base_size = 10) + 
   theme(strip.background = element_blank(), strip.text.x = element_text(face = "italic"), panel.grid = element_blank(),
         legend.position = "top") +
-  guides(color = guide_legend(override.aes = list(alpha = 1, size = 1)))
+  guides(color = guide_legend(override.aes = list(alpha = 1, size = 1.5)))
 ```
 
 For comparative analyses:
@@ -325,13 +325,13 @@ stat.test[stat.test$groups == 'c("Unchanged", "Depleted in IP")', ]$y.position <
 ```{r}
 B <- ggplot(toplot_filter[toplot_filter$sample %in% xx, ], aes(x = IPvsTotal_change, y = RO_log2FoldChange)) +
   geom_boxplot(aes(fill = IPvsTotal_change), outlier.color = NA, width = 0.75, size = 0.5) +
-  stat_pvalue_manual(data = stat.test, label = "p.adj.signif", tip.length = 0.005, size = 1.5, vjust = 0.3) +
-  geom_text(data = nn[nn$sample %in% xx, ], aes(x = IPvsTotal_change, y = -8, label = paste0("n = ", Freq)), size = 1.5) +
+  stat_pvalue_manual(data = stat.test, label = "p.adj.signif", tip.length = 0.005, size = 6/.pt, vjust = 0.3) +
+  geom_text(data = nn[nn$sample %in% xx, ], aes(x = IPvsTotal_change, y = -8, label = paste0("n = ", Freq)), size = 6/.pt) +
   facet_nested(.~sample+NMD, nest_line = TRUE) +
   scale_fill_manual(name = "", values = c("grey70", "orange", "purple")) +
   xlab("") + ylab("Ribosome occupancy") +
   coord_cartesian(ylim = c(-8, 5)) +
-  theme_bw(base_size = 8) + 
+  theme_bw(base_size = 10) + 
   theme(strip.background = element_blank(),
         strip.text.x = element_text(face = "italic"), legend.position = "top", 
         panel.grid = element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank(), axis.title.x = element_blank())
@@ -359,13 +359,13 @@ stat.test[stat.test$groups == 'c("Unchanged", "Depleted in IP")', ]$y.position <
 ```{r}
 C <- ggplot(toplot[toplot$sample %in% xx, ], aes(x = IPvsTotal_change, y = l_cds)) +
   geom_boxplot(aes(fill = IPvsTotal_change), outlier.color = NA, width = 0.75, size = 0.5) +
-  stat_pvalue_manual(data = stat.test, label = "p.adj.signif", tip.length = 0.005, size = 1.5, vjust = 0.3) +
-  geom_text(data = nn[nn$sample %in% xx, ], aes(x = IPvsTotal_change, y = -0.5, label = paste0("n = ", Freq)), size = 1.5) +
+  stat_pvalue_manual(data = stat.test, label = "p.adj.signif", tip.length = 0.005, size = 6/.pt, vjust = 0.3) +
+  geom_text(data = nn[nn$sample %in% xx, ], aes(x = IPvsTotal_change, y = -0.5, label = paste0("n = ", Freq)), size = 6/.pt) +
   facet_nested(.~sample+NMD, nest_line = TRUE) +
   scale_fill_manual(name = "", values = c("grey70", "orange", "purple")) +
   xlab("") + ylab("CDS length (nt)") +
   coord_cartesian(ylim = c(0, 6100)) +
-  theme_bw(base_size = 8) + 
+  theme_bw(base_size = 10) + 
   theme(strip.background = element_blank(),
         strip.text.x = element_text(face = "italic"), legend.position = "none", 
         panel.grid = element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank(), axis.title.x = element_blank())
@@ -393,13 +393,13 @@ stat.test[stat.test$groups == 'c("Unchanged", "Depleted in IP")', ]$y.position <
 ```{r}
 D <- ggplot(toplot[toplot$sample %in% xx, ], aes(x = IPvsTotal_change, y = tAI_cds)) +
   geom_boxplot(aes(fill = IPvsTotal_change), outlier.color = NA, width = 0.75, size = 0.5) +
-  stat_pvalue_manual(data = stat.test, label = "p.adj.signif", tip.length = 0.005, size = 1.5, vjust = 0.3) +
-  geom_text(data = nn[nn$sample %in% xx, ], aes(x = IPvsTotal_change, y = 0.2, label = paste0("n = ", Freq)), size = 1.5) +
+  stat_pvalue_manual(data = stat.test, label = "p.adj.signif", tip.length = 0.005, size = 6/.pt, vjust = 0.3) +
+  geom_text(data = nn[nn$sample %in% xx, ], aes(x = IPvsTotal_change, y = 0.2, label = paste0("n = ", Freq)), size = 6/.pt) +
   facet_nested(.~sample+NMD, nest_line = TRUE) +
   scale_fill_manual(name = "", values = c("grey70", "orange", "purple")) +
   xlab("") + ylab("Codon optimality score in CDS") +
   coord_cartesian(ylim = c(0.2, 0.52)) +
-  theme_bw(base_size = 8) + 
+  theme_bw(base_size = 10) + 
   theme(strip.background = element_blank(),
         strip.text.x = element_text(face = "italic"), legend.position = "none", 
         panel.grid = element_blank(), axis.text.x = element_blank(), axis.ticks.x = element_blank(), axis.title.x = element_blank())
@@ -410,7 +410,7 @@ D <- ggplot(toplot[toplot$sample %in% xx, ], aes(x = IPvsTotal_change, y = tAI_c
 library(patchwork)
 p <- A + B + C + D + plot_layout(nrow = 4, ncol = 1, guides = "collect", heights = c(1.5, 1, 1, 1)) +
   plot_annotation(tag_levels = 'A') & 
-  theme(plot.tag = element_text(size = 9, face = "bold"), legend.position = "top", plot.tag.position = "topleft")
+  theme(plot.tag = element_text(size = 12, face = "bold"), legend.position = "top", plot.tag.position = "topleft")
 ```
 ```{r}
 library(Cairo)
@@ -421,7 +421,7 @@ CairoFonts(
   bolditalic = "Arial:style=Black Italic",
   symbol = "Symbol"
 )
-cairo_pdf(filename = "../../Figures/IPvsTotal_characteristics_6.5x10.pdf", family = "Arial", width = 6.5, height = 10) 
+cairo_pdf(filename = "IPvsTotal_characteristics_7.5x11.pdf", family = "Arial", width = 7.5, height = 11) 
 p
 dev.off()
 ```
